// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Bold Component 1`] = `
<div
  className="padded base"
>
  <p
    className="base regular base text"
  >
    <b
      className="base bold"
    >
      Bold Foo
    </b>
  </p>
</div>
`;

exports[`renders Italicized Component 1`] = `
<div
  className="padded base"
>
  <p
    className="base regular base text"
  >
    <em
      className="base regular italic"
    >
      Italicized Foo
    </em>
  </p>
</div>
`;

exports[`renders Level 1 Heading Component 1`] = `
<div
  className="padded base"
>
  <h1
    className="base black jumbo uppercase heading"
  >
    Heading 1
  </h1>
</div>
`;

exports[`renders Level 2 Heading Component 1`] = `
<div
  className="padded base"
>
  <h2
    className="base black largest uppercase heading"
  >
    Heading 2
  </h2>
</div>
`;

exports[`renders Level 3 Heading Component 1`] = `
<div
  className="padded base"
>
  <h3
    className="base bold larger heading"
  >
    Heading 3
  </h3>
</div>
`;

exports[`renders Level 4 Heading Component 1`] = `
<div
  className="padded base"
>
  <h4
    className="base bold large heading"
  >
    Heading 4
  </h4>
</div>
`;

exports[`renders Level 5 Heading Component 1`] = `
<div
  className="padded base"
>
  <h5
    className="base bold base heading"
  >
    Heading 5
  </h5>
</div>
`;

exports[`renders Level 6 Heading Component 1`] = `
<div
  className="padded base"
>
  <h6>
    Heading
  </h6>
</div>
`;

exports[`renders Text Component 1`] = `
<div
  className="padded base"
>
  <p
    className="base regular base text"
  >
    Paragraph
  </p>
</div>
`;

exports[`renders a combination of Markdown components 1`] = `
<div
  className="padded base"
>
  <h1
    className="base black jumbo uppercase heading"
  >
    This is a paragraph.
  </h1>
  

  <p
    className="base regular base text"
  >
    The paragraph has some 
    <b
      className="base bold"
    >
      bold text
    </b>
     and some 
    <em
      className="base regular italic"
    >
      italicized text
    </em>
    .
  </p>
  

  <p
    className="base regular base text"
  >
    This is the end of this paragraph.
  </p>
</div>
`;

exports[`renders a without headings, paragraph, and wrapping content 1`] = `
Array [
  "No heading should show up",
  "
",
  "This should just be pure string with ",
  <b
    className="base bold"
  >
    bold text
  </b>,
  " and some ",
  <em
    className="base regular italic"
  >
    italicized text
  </em>,
  "
and of course a ",
  <a
    href="http://to.somewhere"
  >
    link
  </a>,
]
`;
